GOGOCSHARP/MiniJavaGramParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from MiniJavaGram.g4 by ANTLR 4.5.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.3")]
[System.CLSCompliant(false)]
public partial class MiniJavaGramParser : Parser {
	public const int
		T__0=1, T__1=2, RETURN=3, CLASS=4, STATIC=5, DOUBLE=6, STRING=7, VOID=8, 
		ENUM=9, PUBLIC=10, FOR=11, DOUBLE_QUOTE=12, ARRAYSQARES=13, COMMETSLASH=14, 
		SYSTEMOUTPRINTLN=15, MULT=16, ASSIGN=17, OBRACE=18, CBRACE=19, DT=20, 
		DC=21, COMMA=22, DOT=23, LBRACKET=24, RBRACKET=25, PASS=26, DIGIT=27, 
		ID=28, WS=29;
	public const int
		RULE_prog = 0, RULE_classBody = 1, RULE_enumdeclar = 2, RULE_main = 3, 
		RULE_otherMthod = 4, RULE_args = 5, RULE_exprassion = 6, RULE_arraydeclaration = 7, 
		RULE_varible = 8, RULE_doubleVal = 9, RULE_doubleArr = 10, RULE_operator = 11, 
		RULE_string = 12, RULE_stringArgs = 13;
	public static readonly string[] ruleNames = {
		"prog", "classBody", "enumdeclar", "main", "otherMthod", "args", "exprassion", 
		"arraydeclaration", "varible", "doubleVal", "doubleArr", "operator", "string", 
		"stringArgs"
	};

	private static readonly string[] _LiteralNames = {
		null, "'main'", "' args'", "'return'", "'class'", "'static'", "'double'", 
		"'String'", "'void'", "'enum'", "'public'", "'for'", "'\"'", "'[]'", "'//'", 
		"'System.out.println'", "'*'", "'='", "'{'", "'}'", "':'", "';'", "','", 
		"'.'", "'('", "')'", "' '"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "RETURN", "CLASS", "STATIC", "DOUBLE", "STRING", "VOID", 
		"ENUM", "PUBLIC", "FOR", "DOUBLE_QUOTE", "ARRAYSQARES", "COMMETSLASH", 
		"SYSTEMOUTPRINTLN", "MULT", "ASSIGN", "OBRACE", "CBRACE", "DT", "DC", 
		"COMMA", "DOT", "LBRACKET", "RBRACKET", "PASS", "DIGIT", "ID", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MiniJavaGram.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public MiniJavaGramParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgContext : ParserRuleContext {
		public ITerminalNode CLASS() { return GetToken(MiniJavaGramParser.CLASS, 0); }
		public ITerminalNode ID() { return GetToken(MiniJavaGramParser.ID, 0); }
		public ITerminalNode OBRACE() { return GetToken(MiniJavaGramParser.OBRACE, 0); }
		public ClassBodyContext classBody() {
			return GetRuleContext<ClassBodyContext>(0);
		}
		public ITerminalNode CBRACE() { return GetToken(MiniJavaGramParser.CBRACE, 0); }
		public ITerminalNode[] PASS() { return GetTokens(MiniJavaGramParser.PASS); }
		public ITerminalNode PASS(int i) {
			return GetToken(MiniJavaGramParser.PASS, i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniJavaGramListener typedListener = listener as IMiniJavaGramListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniJavaGramListener typedListener = listener as IMiniJavaGramListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 28; Match(CLASS);
			State = 30;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			do {
				{
				{
				State = 29; Match(PASS);
				}
				}
				State = 32;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			} while ( _la==PASS );
			State = 34; Match(ID);
			State = 36;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			do {
				{
				{
				State = 35; Match(PASS);
				}
				}
				State = 38;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			} while ( _la==PASS );
			State = 40; Match(OBRACE);
			State = 41; classBody();
			State = 42; Match(CBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassBodyContext : ParserRuleContext {
		public ITerminalNode[] COMMETSLASH() { return GetTokens(MiniJavaGramParser.COMMETSLASH); }
		public ITerminalNode COMMETSLASH(int i) {
			return GetToken(MiniJavaGramParser.COMMETSLASH, i);
		}
		public OtherMthodContext[] otherMthod() {
			return GetRuleContexts<OtherMthodContext>();
		}
		public OtherMthodContext otherMthod(int i) {
			return GetRuleContext<OtherMthodContext>(i);
		}
		public EnumdeclarContext[] enumdeclar() {
			return GetRuleContexts<EnumdeclarContext>();
		}
		public EnumdeclarContext enumdeclar(int i) {
			return GetRuleContext<EnumdeclarContext>(i);
		}
		public MainContext main() {
			return GetRuleContext<MainContext>(0);
		}
		public StringContext[] @string() {
			return GetRuleContexts<StringContext>();
		}
		public StringContext @string(int i) {
			return GetRuleContext<StringContext>(i);
		}
		public ITerminalNode[] ID() { return GetTokens(MiniJavaGramParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(MiniJavaGramParser.ID, i);
		}
		public ClassBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classBody; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniJavaGramListener typedListener = listener as IMiniJavaGramListener;
			if (typedListener != null) typedListener.EnterClassBody(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniJavaGramListener typedListener = listener as IMiniJavaGramListener;
			if (typedListener != null) typedListener.ExitClassBody(this);
		}
	}

	[RuleVersion(0)]
	public ClassBodyContext classBody() {
		ClassBodyContext _localctx = new ClassBodyContext(Context, State);
		EnterRule(_localctx, 2, RULE_classBody);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					State = 59;
					switch (TokenStream.La(1)) {
					case COMMETSLASH:
						{
						State = 44; Match(COMMETSLASH);
						State = 48;
						ErrorHandler.Sync(this);
						_la = TokenStream.La(1);
						while (_la==DOUBLE_QUOTE) {
							{
							{
							State = 45; @string();
							}
							}
							State = 50;
							ErrorHandler.Sync(this);
							_la = TokenStream.La(1);
						}
						State = 54;
						ErrorHandler.Sync(this);
						_la = TokenStream.La(1);
						while (_la==ID) {
							{
							{
							State = 51; Match(ID);
							}
							}
							State = 56;
							ErrorHandler.Sync(this);
							_la = TokenStream.La(1);
						}
						}
						break;
					case PUBLIC:
						{
						State = 57; otherMthod();
						}
						break;
					case ENUM:
						{
						State = 58; enumdeclar();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				State = 63;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			State = 65;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 64; main();
				}
				break;
			}
			State = 84;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ENUM) | (1L << PUBLIC) | (1L << COMMETSLASH))) != 0)) {
				{
				State = 82;
				switch (TokenStream.La(1)) {
				case PUBLIC:
					{
					State = 67; otherMthod();
					}
					break;
				case ENUM:
					{
					State = 68; enumdeclar();
					}
					break;
				case COMMETSLASH:
					{
					State = 69; Match(COMMETSLASH);
					State = 73;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
					while (_la==DOUBLE_QUOTE) {
						{
						{
						State = 70; @string();
						}
						}
						State = 75;
						ErrorHandler.Sync(this);
						_la = TokenStream.La(1);
					}
					State = 79;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
					while (_la==ID) {
						{
						{
						State = 76; Match(ID);
						}
						}
						State = 81;
						ErrorHandler.Sync(this);
						_la = TokenStream.La(1);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 86;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnumdeclarContext : ParserRuleContext {
		public ITerminalNode ENUM() { return GetToken(MiniJavaGramParser.ENUM, 0); }
		public ITerminalNode[] ID() { return GetTokens(MiniJavaGramParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(MiniJavaGramParser.ID, i);
		}
		public ITerminalNode OBRACE() { return GetToken(MiniJavaGramParser.OBRACE, 0); }
		public ITerminalNode CBRACE() { return GetToken(MiniJavaGramParser.CBRACE, 0); }
		public ITerminalNode[] PASS() { return GetTokens(MiniJavaGramParser.PASS); }
		public ITerminalNode PASS(int i) {
			return GetToken(MiniJavaGramParser.PASS, i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(MiniJavaGramParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(MiniJavaGramParser.COMMA, i);
		}
		public EnumdeclarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enumdeclar; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniJavaGramListener typedListener = listener as IMiniJavaGramListener;
			if (typedListener != null) typedListener.EnterEnumdeclar(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniJavaGramListener typedListener = listener as IMiniJavaGramListener;
			if (typedListener != null) typedListener.ExitEnumdeclar(this);
		}
	}

	[RuleVersion(0)]
	public EnumdeclarContext enumdeclar() {
		EnumdeclarContext _localctx = new EnumdeclarContext(Context, State);
		EnterRule(_localctx, 4, RULE_enumdeclar);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87; Match(ENUM);
			State = 89;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			do {
				{
				{
				State = 88; Match(PASS);
				}
				}
				State = 91;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			} while ( _la==PASS );
			State = 93; Match(ID);
			State = 94; Match(OBRACE);
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==PASS || _la==ID) {
				{
				{
				State = 98;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while (_la==PASS) {
					{
					{
					State = 95; Match(PASS);
					}
					}
					State = 100;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				State = 101; Match(ID);
				State = 103;
				_la = TokenStream.La(1);
				if (_la==COMMA) {
					{
					State = 102; Match(COMMA);
					}
				}

				}
				}
				State = 109;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 110; Match(CBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MainContext : ParserRuleContext {
		public ITerminalNode PUBLIC() { return GetToken(MiniJavaGramParser.PUBLIC, 0); }
		public ITerminalNode STATIC() { return GetToken(MiniJavaGramParser.STATIC, 0); }
		public ITerminalNode VOID() { return GetToken(MiniJavaGramParser.VOID, 0); }
		public ITerminalNode LBRACKET() { return GetToken(MiniJavaGramParser.LBRACKET, 0); }
		public StringArgsContext stringArgs() {
			return GetRuleContext<StringArgsContext>(0);
		}
		public ITerminalNode RBRACKET() { return GetToken(MiniJavaGramParser.RBRACKET, 0); }
		public ITerminalNode OBRACE() { return GetToken(MiniJavaGramParser.OBRACE, 0); }
		public ITerminalNode CBRACE() { return GetToken(MiniJavaGramParser.CBRACE, 0); }
		public ITerminalNode[] PASS() { return GetTokens(MiniJavaGramParser.PASS); }
		public ITerminalNode PASS(int i) {
			return GetToken(MiniJavaGramParser.PASS, i);
		}
		public ExprassionContext[] exprassion() {
			return GetRuleContexts<ExprassionContext>();
		}
		public ExprassionContext exprassion(int i) {
			return GetRuleContext<ExprassionContext>(i);
		}
		public MainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_main; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniJavaGramListener typedListener = listener as IMiniJavaGramListener;
			if (typedListener != null) typedListener.EnterMain(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniJavaGramListener typedListener = listener as IMiniJavaGramListener;
			if (typedListener != null) typedListener.ExitMain(this);
		}
	}

	[RuleVersion(0)]
	public MainContext main() {
		MainContext _localctx = new MainContext(Context, State);
		EnterRule(_localctx, 6, RULE_main);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112; Match(PUBLIC);
			State = 114;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			do {
				{
				{
				State = 113; Match(PASS);
				}
				}
				State = 116;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			} while ( _la==PASS );
			State = 118; Match(STATIC);
			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			do {
				{
				{
				State = 119; Match(PASS);
				}
				}
				State = 122;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			} while ( _la==PASS );
			State = 124; Match(VOID);
			State = 126;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			do {
				{
				{
				State = 125; Match(PASS);
				}
				}
				State = 128;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			} while ( _la==PASS );
			State = 130; Match(T__0);
			State = 131; Match(LBRACKET);
			State = 132; stringArgs();
			State = 133; Match(RBRACKET);
			State = 135;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			do {
				{
				{
				State = 134; Match(PASS);
				}
				}
				State = 137;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			} while ( _la==PASS );
			State = 139; Match(OBRACE);
			State = 143;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RETURN) | (1L << DOUBLE) | (1L << FOR) | (1L << COMMETSLASH) | (1L << SYSTEMOUTPRINTLN))) != 0)) {
				{
				{
				State = 140; exprassion();
				}
				}
				State = 145;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 146; Match(CBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OtherMthodContext : ParserRuleContext {
		public ITerminalNode PUBLIC() { return GetToken(MiniJavaGramParser.PUBLIC, 0); }
		public ITerminalNode STATIC() { return GetToken(MiniJavaGramParser.STATIC, 0); }
		public ITerminalNode ID() { return GetToken(MiniJavaGramParser.ID, 0); }
		public ITerminalNode LBRACKET() { return GetToken(MiniJavaGramParser.LBRACKET, 0); }
		public ArgsContext args() {
			return GetRuleContext<ArgsContext>(0);
		}
		public ITerminalNode RBRACKET() { return GetToken(MiniJavaGramParser.RBRACKET, 0); }
		public ITerminalNode OBRACE() { return GetToken(MiniJavaGramParser.OBRACE, 0); }
		public ITerminalNode CBRACE() { return GetToken(MiniJavaGramParser.CBRACE, 0); }
		public ITerminalNode DOUBLE() { return GetToken(MiniJavaGramParser.DOUBLE, 0); }
		public ITerminalNode VOID() { return GetToken(MiniJavaGramParser.VOID, 0); }
		public ITerminalNode[] PASS() { return GetTokens(MiniJavaGramParser.PASS); }
		public ITerminalNode PASS(int i) {
			return GetToken(MiniJavaGramParser.PASS, i);
		}
		public ExprassionContext[] exprassion() {
			return GetRuleContexts<ExprassionContext>();
		}
		public ExprassionContext exprassion(int i) {
			return GetRuleContext<ExprassionContext>(i);
		}
		public OtherMthodContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_otherMthod; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniJavaGramListener typedListener = listener as IMiniJavaGramListener;
			if (typedListener != null) typedListener.EnterOtherMthod(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniJavaGramListener typedListener = listener as IMiniJavaGramListener;
			if (typedListener != null) typedListener.ExitOtherMthod(this);
		}
	}

	[RuleVersion(0)]
	public OtherMthodContext otherMthod() {
		OtherMthodContext _localctx = new OtherMthodContext(Context, State);
		EnterRule(_localctx, 8, RULE_otherMthod);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 148; Match(PUBLIC);
			State = 150;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			do {
				{
				{
				State = 149; Match(PASS);
				}
				}
				State = 152;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			} while ( _la==PASS );
			State = 154; Match(STATIC);
			State = 156;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			do {
				{
				{
				State = 155; Match(PASS);
				}
				}
				State = 158;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			} while ( _la==PASS );
			State = 160;
			_la = TokenStream.La(1);
			if ( !(_la==DOUBLE || _la==VOID) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
			    Consume();
			}
			State = 162;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			do {
				{
				{
				State = 161; Match(PASS);
				}
				}
				State = 164;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			} while ( _la==PASS );
			State = 166; Match(ID);
			State = 167; Match(LBRACKET);
			State = 168; args();
			State = 169; Match(RBRACKET);
			State = 170; Match(OBRACE);
			State = 174;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RETURN) | (1L << DOUBLE) | (1L << FOR) | (1L << COMMETSLASH) | (1L << SYSTEMOUTPRINTLN))) != 0)) {
				{
				{
				State = 171; exprassion();
				}
				}
				State = 176;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 177; Match(CBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArgsContext : ParserRuleContext {
		public ITerminalNode[] DOUBLE() { return GetTokens(MiniJavaGramParser.DOUBLE); }
		public ITerminalNode DOUBLE(int i) {
			return GetToken(MiniJavaGramParser.DOUBLE, i);
		}
		public ITerminalNode[] ID() { return GetTokens(MiniJavaGramParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(MiniJavaGramParser.ID, i);
		}
		public ITerminalNode[] PASS() { return GetTokens(MiniJavaGramParser.PASS); }
		public ITerminalNode PASS(int i) {
			return GetToken(MiniJavaGramParser.PASS, i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(MiniJavaGramParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(MiniJavaGramParser.COMMA, i);
		}
		public ArgsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_args; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniJavaGramListener typedListener = listener as IMiniJavaGramListener;
			if (typedListener != null) typedListener.EnterArgs(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniJavaGramListener typedListener = listener as IMiniJavaGramListener;
			if (typedListener != null) typedListener.ExitArgs(this);
		}
	}

	[RuleVersion(0)]
	public ArgsContext args() {
		ArgsContext _localctx = new ArgsContext(Context, State);
		EnterRule(_localctx, 10, RULE_args);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 197;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==DOUBLE) {
				{
				{
				State = 179; Match(DOUBLE);
				State = 181;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				do {
					{
					{
					State = 180; Match(PASS);
					}
					}
					State = 183;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				} while ( _la==PASS );
				State = 185; Match(ID);
				State = 189;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while (_la==PASS) {
					{
					{
					State = 186; Match(PASS);
					}
					}
					State = 191;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				State = 193;
				_la = TokenStream.La(1);
				if (_la==COMMA) {
					{
					State = 192; Match(COMMA);
					}
				}

				}
				}
				State = 199;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprassionContext : ParserRuleContext {
		public ITerminalNode RETURN() { return GetToken(MiniJavaGramParser.RETURN, 0); }
		public VaribleContext[] varible() {
			return GetRuleContexts<VaribleContext>();
		}
		public VaribleContext varible(int i) {
			return GetRuleContext<VaribleContext>(i);
		}
		public OperatorContext @operator() {
			return GetRuleContext<OperatorContext>(0);
		}
		public ITerminalNode DC() { return GetToken(MiniJavaGramParser.DC, 0); }
		public ITerminalNode[] PASS() { return GetTokens(MiniJavaGramParser.PASS); }
		public ITerminalNode PASS(int i) {
			return GetToken(MiniJavaGramParser.PASS, i);
		}
		public ITerminalNode SYSTEMOUTPRINTLN() { return GetToken(MiniJavaGramParser.SYSTEMOUTPRINTLN, 0); }
		public ITerminalNode[] LBRACKET() { return GetTokens(MiniJavaGramParser.LBRACKET); }
		public ITerminalNode LBRACKET(int i) {
			return GetToken(MiniJavaGramParser.LBRACKET, i);
		}
		public ITerminalNode[] RBRACKET() { return GetTokens(MiniJavaGramParser.RBRACKET); }
		public ITerminalNode RBRACKET(int i) {
			return GetToken(MiniJavaGramParser.RBRACKET, i);
		}
		public ITerminalNode[] ID() { return GetTokens(MiniJavaGramParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(MiniJavaGramParser.ID, i);
		}
		public StringContext[] @string() {
			return GetRuleContexts<StringContext>();
		}
		public StringContext @string(int i) {
			return GetRuleContext<StringContext>(i);
		}
		public ITerminalNode DOT() { return GetToken(MiniJavaGramParser.DOT, 0); }
		public ArraydeclarationContext arraydeclaration() {
			return GetRuleContext<ArraydeclarationContext>(0);
		}
		public ITerminalNode FOR() { return GetToken(MiniJavaGramParser.FOR, 0); }
		public ITerminalNode DOUBLE() { return GetToken(MiniJavaGramParser.DOUBLE, 0); }
		public ITerminalNode DT() { return GetToken(MiniJavaGramParser.DT, 0); }
		public ITerminalNode OBRACE() { return GetToken(MiniJavaGramParser.OBRACE, 0); }
		public ITerminalNode CBRACE() { return GetToken(MiniJavaGramParser.CBRACE, 0); }
		public ExprassionContext[] exprassion() {
			return GetRuleContexts<ExprassionContext>();
		}
		public ExprassionContext exprassion(int i) {
			return GetRuleContext<ExprassionContext>(i);
		}
		public ITerminalNode COMMETSLASH() { return GetToken(MiniJavaGramParser.COMMETSLASH, 0); }
		public ExprassionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exprassion; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniJavaGramListener typedListener = listener as IMiniJavaGramListener;
			if (typedListener != null) typedListener.EnterExprassion(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniJavaGramListener typedListener = listener as IMiniJavaGramListener;
			if (typedListener != null) typedListener.ExitExprassion(this);
		}
	}
